--- a/web/index.html
+++ b/web/index.html
@@ -53,6 +53,12 @@
             <a href="#" class="refazer action-button" onclick="location.reload()">Tentar Novamente</a><br><br><br>
         </fieldset>
     </form>
+    <div id="footer">
+        <p><a href="https://github.com/marcelobns/prolog_quiz" target="_blank"><i class="fa fa-github fa-lg"></i> Projeto e Manual</a></p><br>
+        <p>Autor: <a href="https://github.com/marcelobns" target="_blank">Marcelo Barbosa</a></p>
+        <p>Disciplina: Inteligência Artificial</p>
+        <p>Professor: José Franscisco Netto</p>
+    </div>
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/jquery.easing.min.js" type="text/javascript"></script>
     <script src="js/quiz.js" type="text/javascript"></script>
